2022-08-19  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha06: Cheney';git push
	git tag -a 5.1.1-alpha06 -m 'ncclimo region_name, cell_methods';git push --tags

	* Add in_zarr.cdl and in_zarr4.cdl to generate more complex NCZarr test files

2022-08-17  Charlie Zender  <zender@uci.edu>

	* ncclimo add cell_methods="area: mean" attribute

	* ncclimo add coordinates="region_name" attribute

	* NCO 5.1.1-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha05: Round Ray';git push
	git tag -a 5.1.1-alpha05 -m 'ncclimo rgn_avg';git push --tags

	* ncclimo: Fold-in --glb_avg into --rgn_avg regional average timeseries capabilities

2022-08-11  Charlie Zender  <zender@uci.edu>

	* ncclimo/ncremap: Add Cori build environment modules to NCO_OVERRIDE_PATH (required for Intel)

	* NCO 5.1.1-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha04: Curtis';git push
	git tag -a 5.1.1-alpha04 -m 'nco_fl_chmod, ncatted, ncrename with NCZarr;ncclimo hms_avg';git push --tags

	* Verify --hms_avg is exact for unstructured EAM variables without _FillValue

2022-08-10  Charlie Zender  <zender@uci.edu>

	* ncclimo add hemispheric-mean timeseries switch --hms_avg

2022-07-18  Charlie Zender  <zender@uci.edu>

	* Fix permissions of chmod, test with complex files. Almost ready for primetime.

2022-07-15  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha03: Moon Sun Run';git push
	git tag -a 5.1.1-alpha03 -m 'nco_fl_[mv,rm,cp] works with NCZarr';git push --tags

	* Verify that file manipulation works for NCZarr I/O!

	* Extend nco_fl_mv(), nco_fl_rm(), and nco_fl_cp() to handle directories

	* Use and verify nco_fl_ncz2psx() in nco_fl_mv()

	* Prevent MSVC build errors by searching in volatile not const strings

	* Fix invalid pointer references

	* Draft and test nco_fl_ncz2psx()...it fails
